change text for deletion align cancel button fix miss-spelling in class add close icon for dialog

--- a/src/app/shared/styles/material/mat-button.scss
+++ b/src/app/shared/styles/material/mat-button.scss
@@ -216,10 +216,13 @@
         font-weight: 700;
 
         &__outlined {
-            color: $green-color;
+            color: $dark-grey-color;
             background-color: transparent;
             border: 0;
             border-radius: 5px;
+            width: auto;
+            padding: 0;
+            min-width: unset;
         }
 
         &__positive {
